Update landing page and fix whitespace on /facilitate

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -220,7 +220,6 @@ main {
 	.meeting-card, .team-card {
 		padding-top: $padding-sm;
 		padding-bottom: $padding-sm;
-		border-bottom: 1px solid $gray;
 
 		a {
 			display: flex;
